# report_authentication

./: .dockerignore  .env  .env_dev  .gitignore  Dockerfile  Dockerfile-dev  Dockerfile-dev-mac  README.md  docker-compose-backend.yml  docker-compose-dev-mac.yml  docker-compose-dev.yml  docker-compose-frontend.yml  docker-compose-fullstack-dev.yml  docker-compose-fullstack.yml  docker-compose.yml  pyproject.toml  requirements.txt  superuser.json
app/: app.py  config.py  example_request.py  exceptions.py  main.py  main_dev.py  s3.py  superreport.json  test.py  test_main.py
app/api/: __init__.py  files.py  license.py  reports.py  s3.py  stat.py  users.py
app/db/: database.py  tables.py
app/migrations/versions/: 6c115fb2fb24_initial_migration.py
app/models/: files.py  license.py  reports.py  users.py
app/services/: depends.py  license.py  qr_generator.py  reports.py  s3.py  statistics.py  users.py
app/static/css/: bootstrap.min.css  style.css
app/static/js/: app.js  requestReport.js  requests.js
app/templates/: 404.html  base.html  header.html  header_personal.html  header_report.html  index.html  login.html  personal.html  show_report.html
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  example_request.py  main.py
backend/app/api/: files.py  reports.py  s3.py  test_type_files.py  users.py
backend/app/db/: SQL_functions.txt  tables.py
backend/app/models/: files.py  users.py
backend/app/modules/: exceptions.py
backend/app/services/: depends.py  reports.py  users.py
backend/app/static/css/: style.css
backend/app/static/js/: app.js  requestReport.js
backend/app/templates/: base.html  header_personal.html  index.html  login.html  personal.html
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  script.sh
frontend/public/: bootstrap.min.css  index.html  manifest.json
frontend/src/: App.css  App.jsx  bootstrap.min.css  index.css  index.js
frontend/src/Utils/: IsMobile.jsx  loadImage.jsx  login.jsx  views.jsx  whenReady.jsx
server/conf.d/: app.conf
src/: Dockerfile-dev
src/app/: app.py  config.py
src/app/api/: s3.py
src/app/migrations/: env.py
src/app/models/: files.py  reports.py  users.py
(+21 files in other folders)
