[tool.poetry]
name = "laboratory tests storage service"
version = "1.0.0"
description = ""
authors = ["Nick <tnick1502@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
aiobotocore = "^2.15.1"
sqlalchemy = "^2.0.35"
uvicorn = "^0.31.0"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
starlette-exporter = "^0.23.0"
pycryptodome = "^3.20.0"
python-jose = {extras = ["cryptodome"], version = "^3.3.0"}
fastapi-cache2 = "^0.2.2"
redis = "^5.1.0"
python-multipart = "^0.0.12"
jinja2 = "^3.1.4"
passlib = "^1.7.4"
qrcode = "7.3.1"
humanize = "^4.10.0"
pillow = "9.1.1"
pyzbar = "^0.1.9"
path = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
